@@ -1,11 +1,14 @@
-# oscam.conf generated automatically by Streamboard OSCAM 1.00-unstable_svn build #0
-# Read more: http://streamboard.gmc.to/svn/oscam/trunk/Distribution/doc/txt/oscam.conf.txt
+#
+# main configuration
+#
 
 [global]
+nice          = -1
+WaitForCards  = 1
+
 usrfile                       = /storage/.kodi/userdata/addon_data/service.softcam.oscam/log/oscamuser.log
 logfile                       = /storage/.kodi/userdata/addon_data/service.softcam.oscam/log/oscam.log
 cwlogdir                      = /storage/.kodi/userdata/addon_data/service.softcam.oscam/log/cw
-nice                          = -1
 saveinithistory               = 1
 
 [monitor]
