@@ -1,10 +1,0 @@
-<?xml version="1.0" encoding="utf-8" standalone="yes"?>
-<strings>
-	<string id="1000">General</string>
-	<string id="1011">Restart on suspend / resume</string>
-	<string id="1001">DVBAPI</string>
-	<string id="1012">Delay the start of OSCam</string>
-	<string id="1013">time (s)</string>
-	<string id="1022">Wait for frontend initialization</string>
-	<string id="1023">Number of adapters to wait for</string>
-</strings>
