@@ -1,3 +1,7 @@
+105
+- update OScam to 11420
+- add SSL support
+
 104
 - update OSCam to 11391
 
